--- a/src/app/modules/main/main-page/main-page.component.html
+++ b/src/app/modules/main/main-page/main-page.component.html
@@ -3,14 +3,14 @@
   <header class="header-6">
     <div class="branding">
       <a routerLink="/" class="nav-link">
-        <span class="title">Super6</span>
+        <span class="title">test</span>
       </a>
     </div>
   </header>
 
   <!-- Sidebar -->
   <div class="content-container">
-    <clr-vertical-nav [clrVerticalNavCollapsible]="demoCollapsible">
+    <!-- <clr-vertical-nav [clrVerticalNavCollapsible]="demoCollapsible">
       <a clrVerticalNavLink routerLinkActive="active" routerLink="/template">
         Landing-page
       </a>
@@ -22,7 +22,7 @@
       >
         UI-UX
       </a>
-    </clr-vertical-nav>
+    </clr-vertical-nav> -->
 
     <br />
     <!-- รายชื่อคนที่ลา
