--- a/src/app/modules/main/main-page/main-page.component.html
+++ b/src/app/modules/main/main-page/main-page.component.html
@@ -7,128 +7,66 @@
       </a>
     </div>
   </header>
+  <button (click)="add()">ADD</button>
 
-  <!-- Sidebar -->
-  <div class="content-container">
-    <!-- <clr-vertical-nav [clrVerticalNavCollapsible]="demoCollapsible">
-      <a clrVerticalNavLink routerLinkActive="active" routerLink="/template">
-        Landing-page
-      </a>
-      <a
-        clrVerticalNavLink
-        routerLinkActive="active"
-        target="_blank"
-        href="https://chananatek.wixsite.com/super5"
-      >
-        UI-UX
-      </a>
-    </clr-vertical-nav> -->
-
-    <br />
-    <!-- รายชื่อคนที่ลา
-    <clr-datagrid *ngIf="userList">
+  <div>
+    <clr-datagrid *ngIf="pList">
+      <clr-dg-column></clr-dg-column>
+      <clr-dg-column>hn</clr-dg-column>
+      <clr-dg-column>ชื่อ-นามสกุล</clr-dg-column>
+      <clr-dg-column>เพศ</clr-dg-column>
       <clr-dg-column>#</clr-dg-column>
-      <clr-dg-column [clrDgField]="'name'">ชื่อ</clr-dg-column>
-      <clr-dg-column [clrDgField]="'surname'">สกุล</clr-dg-column>
-      <clr-dg-column>วันที่ลา</clr-dg-column>
-      <clr-dg-column>ถึงวันที่</clr-dg-column>
-      <clr-dg-column>ประเภทที่ลา</clr-dg-column>
-      <clr-dg-row *clrDgItems="let user of userList; let i = index">
-        <clr-dg-cell>{{ i + 1 }}</clr-dg-cell>
-        <clr-dg-cell>{{ user.name }}</clr-dg-cell>
-        <clr-dg-cell>{{ user.surname }}</clr-dg-cell>
-        <clr-dg-cell>{{ user.dateStart }}</clr-dg-cell>
-        <clr-dg-cell>{{ user.dateEnd }}</clr-dg-cell>
-        <clr-dg-cell>{{ user.lTypeName }}</clr-dg-cell>
-      </clr-dg-row>
-      <clr-dg-footer>
-        <b style="color: red">คนลาทั้งหมด {{ userList.length }} คน</b
-        >&nbsp;&nbsp;
-        <clr-dg-pagination #pagination [clrDgPageSize]="10">
-          <clr-dg-page-size [clrPageSizeOptions]="[10, 15, 20, 25]"
-            >leave per page</clr-dg-page-size
-          >
-          {{ pagination.firstItem + 1 }} - {{ pagination.lastItem + 1 }} of
-          {{ pagination.totalItems }} leave
-        </clr-dg-pagination>
-      </clr-dg-footer>
-    </clr-datagrid> -->
-    <br /><br />
-
-    <!--   
-  <h1>
-    รายงานสรุปวันลาจําแนกตามปีงบประมาณและเดือน
-  </h1>
-  <form>
-    <clr-input-container clrInline>
-      <label>รายงานสรุปวันลาจําแนกตามปีงบประมาณ (พุทธศักราช)</label>
-      <input clrInput placeholder="ex. 2562" name="searchYear" clrInput [(ngModel)]="searchYear" [(ngModel)]="search"
-        required />
-    </clr-input-container>
-    <div class="clr-form-control">
-      <label for="select-full" class="clr-control-label">ประจำเดือน</label>
-      <div class="clr-control-container">
-        <div class="clr-select-wrapper">
-          <select id="selectMonth" name="selectMonth" [(ngModel)]="selectMonth" class="clr-select">
-            <option value="1">มกราคม</option>
-            <option value="2">กุมภาพันธ์</option>
-            <option value="3">มีนาคม</option>
-            <option value="4">เมษายน</option>
-            <option value="5">พฤษภาคม</option>
-            <option value="6">มิถุนายน</option>
-            <option value="7">กรกฎาคม</option>
-            <option value="8">สิงหาคม</option>
-            <option value="9">กันยายน</option>
-            <option value="10">ตุลาคม</option>
-            <option value="11">พฤศจิกายน</option>
-            <option value="12">ธันวาคม</option>
-          </select>
-          <clr-icon class="clr-validate-icon" shape="exclamation-circle"></clr-icon>
-        </div>
-      </div>
-    </div>
-    <br>
-    <button type="button" class="btn btn-primary" (click)="onSearch(searchYear,selectMonth)"
-      [disabled]="!searchYear ||searchYear.length != 4">ค้นหา
-    </button>
-  </form>
-  
-  
-  <div *ngFor="let item of userList">
-    <h2> {{item.depName}} </h2>
-    <clr-datagrid>
-      <clr-dg-column>ชื่อ-นามสกุล</clr-dg-column>
-      <clr-dg-column *ngFor="let type of typeList">{{type.lTypeName}} (วัน)</clr-dg-column>
-  
-      <clr-dg-row *ngFor="let user of item.item">
-        <clr-dg-cell>{{user.name}} {{user.surname}}</clr-dg-cell>
-        <clr-dg-cell *ngFor="let t of typeList">{{user[t.lTypeId]}} </clr-dg-cell>
+      <clr-dg-row *ngFor="let item of pList; let i = index">
+        <clr-dg-cell>{{ i+1 }}</clr-dg-cell>
+        <clr-dg-cell>{{ item.hn }}</clr-dg-cell>
+        <clr-dg-cell>{{ item.firstname }} {{ item.surname }}</clr-dg-cell>
+        <clr-dg-cell *ngIf="item.sex == 'W'">หญิง</clr-dg-cell>
+        <clr-dg-cell *ngIf="item.sex == 'M'">ชาย</clr-dg-cell>
+        <clr-dg-cell>
+          <button (click)="sendItem(item)">EDIT</button>
+          <button (click)="del(item.hn)">DELETE</button>
+        </clr-dg-cell>
       </clr-dg-row>
     </clr-datagrid>
-  </div> -->
-    <br />
-    <p>eer works!</p>
-    ก็ต้องมาไหม<br />
-    ----------- <br />
-    <!-- <router-outlet>luu</router-outlet> -->
-    <h *ngFor="let i of pList">
-      ชื่อ: {{ i.firstname }} {{ i.surename }}<br />
-
-      <div *ngIf="i.sex == 'W'">เพศ: หญิง</div>
-      <div *ngIf="i.sex == 'M'">เพศ: ชาย</div>
-    </h>
-    <button class="btn btn-outline">Regular</button>
   </div>
-  <!-- <div *ngFor="let item of userList">
-    <h2> {{item.depName}} </h2>
-    <clr-datagrid>
-      <clr-dg-column>ชื่อ-นามสกุล</clr-dg-column>
-      <clr-dg-column *ngFor="let type of typeList">{{type.lTypeName}} (วัน)</clr-dg-column>
-  
-      <clr-dg-row *ngFor="let user of item.item">
-        <clr-dg-cell>{{user.name}} {{user.surname}}</clr-dg-cell>
-        <clr-dg-cell *ngFor="let t of typeList">{{user[t.lTypeId]}} </clr-dg-cell>
-      </clr-dg-row>
-    </clr-datagrid>
-  </div> -->
+  <!-- <h1>insert</h1>
+  ชื่อ: <input type="text" [(ngModel)]="name" value="name" /><br />
+  hn: <input type="number" [(ngModel)]="hn" value="hn" min="1" />
+  <button (click)="onClick(name, hn)" [disabled]="!name || !hn">เพิ่ม</button>
+  <div *ngIf="hn <= 0">CHECK HN!</div> -->
 </div>
+
+<clr-modal *ngIf="chge" [(clrModalOpen)]="modalEdit">
+  <h3 class="modal-title" *ngIf="mode=='edit'">แก้ไข</h3>
+  <h3 class="modal-title" *ngIf="mode=='add'">เพิ่ม</h3>
+  <div class="modal-body">
+    <label><b>HN</b></label>
+      <clr-input-container class="clr-col-8">
+          <input clrInput type="text" [(ngModel)]="chge.hn" name="hn" [disabled]="mode=='edit'">
+      </clr-input-container><br>
+      <label><b>ชื่อ</b></label>
+      <clr-input-container class="clr-col-8">
+          <input clrInput type="text" [(ngModel)]="chge.firstname" name="firstname">
+      </clr-input-container><br>
+      <label><b>นามสกุล</b></label>
+      <clr-input-container class="clr-col-8">
+          <input clrInput type="text" [(ngModel)]="chge.surname" name="surname">
+      </clr-input-container><br>
+      <clr-radio-container clrInline>
+        <label>กรุณาเลือก</label>
+        <clr-radio-wrapper>
+            <input type="radio" clrRadio name="sex" required value="W" [(ngModel)]="chge.sex" />
+            <label>หญิง</label>
+        </clr-radio-wrapper>
+        <clr-radio-wrapper>
+            <input type="radio" clrRadio name="sex" required value="M" [(ngModel)]="chge.sex" />
+            <label>ชาย</label>
+        </clr-radio-wrapper>
+    </clr-radio-container>
+  </div>
+  <br>
+  <div class="modal-footer">
+      <button type="button" class="btn btn-outline" (click)="modalEdit = false">ยกเลิก</button>
+      <button type="button" class="btn btn-primary" (click)="onSave()" [disabled]="!chge.firstname || !chge.surname || !chge.sex">บันทึก</button>
+  </div>
+</clr-modal>
