--- a/src/app/modules/main/main-page/main-page.component.html
+++ b/src/app/modules/main/main-page/main-page.component.html
@@ -1,146 +1,9 @@
-<div class="main-container">
-  <!-- Header -->
-  <header class="header-6">
-    <div class="branding">
-      <a routerLink="/" class="nav-link">
-        <span class="title">test</span>
-      </a>
-    </div>
-  </header>
-  <!-- <my-date-picker
-    name="dateTest"
-    [(ngModel)]="dateTest"
-    required
-    ></my-date-picker> -->
-  <div class="clr-row-1">
-    {{ today }}
-    {{ dateTest }}<br />
-    <input
-      *ngIf="today"
-      type="date"
-      name="dateTest"
-      [value]="today"
-      [(ngModel)]="dateTest"
-    />
-    <!-- <br /> -->
-    <button class="btn btn-sm" (click)="testDate(dateTest)">ลองจ้า</button>
-    <button class="btn btn-sm" (click)="add()">ADD</button>
-  </div>
-
-  <div class="clr-col">
-    <clr-datagrid *ngIf="pList">
-      <clr-dg-column></clr-dg-column>
-      <clr-dg-column>hn</clr-dg-column>
-      <clr-dg-column>ชื่อ-นามสกุล</clr-dg-column>
-      <clr-dg-column>เพศ</clr-dg-column>
-      <clr-dg-column>วันที่ลงทะเบียน</clr-dg-column>
-      <clr-dg-column>#</clr-dg-column>
-      <clr-dg-row *ngFor="let item of pList; let i = index">
-        <clr-dg-cell>{{ i + 1 }}</clr-dg-cell>
-        <clr-dg-cell>{{ item.hn }}</clr-dg-cell>
-        <clr-dg-cell>{{ item.firstname }} {{ item.surname }}</clr-dg-cell>
-        <clr-dg-cell *ngIf="item.sex == 'W'">หญิง</clr-dg-cell>
-        <clr-dg-cell *ngIf="item.sex == 'M'">ชาย</clr-dg-cell>
-        <clr-dg-cell>{{ item.dateShow }}</clr-dg-cell>
-        <clr-dg-cell>
-          <button class="btn btn-outline" (click)="sendItem(item)">EDIT</button>
-          <button class="btn btn-danger-outline" (click)="del(item.hn)">
-            DELETE
-          </button>
-        </clr-dg-cell>
-      </clr-dg-row>
-    </clr-datagrid>
-  </div>
-  <!-- <h1>insert</h1>
-  ชื่อ: <input type="text" [(ngModel)]="name" value="name" /><br />
-  hn: <input type="number" [(ngModel)]="hn" value="hn" min="1" />
-  <button (click)="onClick(name, hn)" [disabled]="!name || !hn">เพิ่ม</button>
-  <div *ngIf="hn <= 0">CHECK HN!</div> -->
-</div>
-
-<clr-modal *ngIf="chge" [(clrModalOpen)]="modalEdit">
-  <h3 class="modal-title" *ngIf="mode == 'edit'">แก้ไข</h3>
-  <h3 class="modal-title" *ngIf="mode == 'add'">เพิ่ม</h3>
-  <div class="modal-body">
-    <label><b>HN</b></label>
-    <clr-input-container class="clr-col-8">
-      <input
-        clrInput
-        type="number"
-        [(ngModel)]="chge.hn"
-        name="hn"
-        [disabled]="mode == 'edit'"
-      /> </clr-input-container
-    ><br />
-    <label><b>ชื่อ</b></label>
-    <clr-input-container class="clr-col-8">
-      <input
-        clrInput
-        type="text"
-        [(ngModel)]="chge.firstname"
-        name="firstname"
-      /> </clr-input-container
-    ><br />
-    <label><b>นามสกุล</b></label>
-    <clr-input-container class="clr-col-8">
-      <input
-        clrInput
-        type="text"
-        [(ngModel)]="chge.surname"
-        name="surname"
-      /> </clr-input-container
-    ><br />
-    <clr-radio-container clrInline>
-      <label>กรุณาเลือก</label>
-      <clr-radio-wrapper>
-        <input
-          type="radio"
-          clrRadio
-          name="sex"
-          required
-          value="W"
-          [(ngModel)]="chge.sex"
-        />
-        <label>หญิง</label>
-      </clr-radio-wrapper>
-      <clr-radio-wrapper>
-        <input
-          type="radio"
-          clrRadio
-          name="sex"
-          required
-          value="M"
-          [(ngModel)]="chge.sex"
-        />
-        <label>ชาย</label>
-      </clr-radio-wrapper> </clr-radio-container
-    ><br />
-    <label><b>วันที่ </b></label>
-    <input type="date" name="date" value="chge.date" [(ngModel)]="chge.date" />
-    <!-- <div class="clr-row">
-      <div class="clr-col-6">
-        วันที่
-        <my-date-picker-th
-          name="date"
-          [options]="myDatePickerOptions"
-          [(ngModel)]="chge.date"
-          required
-        ></my-date-picker-th>
-      </div>
-    </div> -->
-  </div>
-  <br />
-  <div class="modal-footer">
-    <button type="button" class="btn btn-outline" (click)="modalEdit = false">
-      ยกเลิก
-    </button>
-    <button
-      type="button"
-      class="btn btn-primary"
-      (click)="onSave()"
-      [disabled]="!chge.firstname || !chge.surname || !chge.sex"
-    >
-      บันทึก
-    </button>
-  </div>
-</clr-modal>
+<h1>HELLO</h1>
+<iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/aPd9exmH17o?controls=0?autoplay=1"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+></iframe>
