--- a/src/app/modules/main/layout/layout.component.html
+++ b/src/app/modules/main/layout/layout.component.html
@@ -1,53 +1,62 @@
 <div class="main-container">
-    <header class="header header-6">
-      <div class="branding">
-        <a href="./admin/main" class="nav-link">
-          <clr-icon shape="book"></clr-icon>
-          <span class="title">test</span>
-        </a>
-      </div>
-      <div class="header-actions">
-        <clr-dropdown>
-          <button class="nav-text" clrDropdownTrigger>
-            ชื่อ สกุล
-            <clr-icon shape="caret down"></clr-icon>
-          </button>
-  
-          <!-- <clr-dropdown-menu *clrIfOpen clrPosition="bottom-right">
+  <header class="header header-6">
+    <div class="branding">
+      <a href="#/main/main" class="nav-link">
+        <clr-icon shape="book"></clr-icon>
+        <span class="title">test</span>
+      </a>
+    </div>
+    <div class="header-actions">
+      <clr-dropdown>
+        <button class="nav-text" clrDropdownTrigger>
+          ชื่อ สกุล
+          <clr-icon shape="caret down"></clr-icon>
+        </button>
+
+        <!-- <clr-dropdown-menu *clrIfOpen clrPosition="bottom-right">
             <a href="javascript://" clrDropdownItem routerLink="./about">ข้อมูลส่วนตัว</a>
             <a href="javascript://" clrDropdownItem (click)="onLogout()">ออกจากระบบ</a>
           </clr-dropdown-menu> -->
-        </clr-dropdown>
-      </div>
-  
-    </header>
-    <div class="content-container">
-      <div class="content-area">
-        <router-outlet></router-outlet>
-  
-      </div>
-      <nav class="sidenav">
-        <section class="sidenav-content">
-          <a routerLink="./main" class="nav-link">
-            Home
-          </a>
-          <a routerLink="./opdS" class="nav-link">
-            OPD visit
-          </a>
-          <a routerLink="./patient" class="nav-link">
-            Patient
-          </a>
-          <a routerLink="./employee" class="nav-link">
-            employee
-          </a>
-          <a routerLink="./dx" class="nav-link">
-            diagnosis
-          </a>
-          <a routerLink="./dep" class="nav-link">
-            dep
-          </a>
-        </section>
-      </nav>
+      </clr-dropdown>
     </div>
+  </header>
+  <div class="content-container">
+    <div class="content-area">
+      <router-outlet></router-outlet>
+    </div>
+    <clr-vertical-nav [clrVerticalNavCollapsible]="true" [(clrVerticalNavCollapsed)]="collapsed">
+      <a clrVerticalNavLink routerLinkActive="active" routerLink="./main">
+        <clr-icon shape="home" clrVerticalNavIcon></clr-icon>
+        Home
+      </a>
+      <a clrVerticalNavLink routerLink="./opdS" routerLinkActive="active">
+        <clr-icon shape="event" clrVerticalNavIcon></clr-icon>
+        OPD visit
+      </a>
+      <a clrVerticalNavLink routerLink="./patient" routerLinkActive="active">
+        <clr-icon shape="user" clrVerticalNavIcon></clr-icon>
+        Patient
+      </a>
+      <a clrVerticalNavLink routerLink="./employee" routerLinkActive="active">
+        <clr-icon shape="id-badge" clrVerticalNavIcon></clr-icon>
+        employee
+      </a>
+      <a clrVerticalNavLink routerLink="./dx" routerLinkActive="active">
+        <clr-icon shape="color-picker" clrVerticalNavIcon></clr-icon>
+        diagnosis
+      </a>
+      <a clrVerticalNavLink routerLink="./dep" routerLinkActive="active">
+        <clr-icon shape="factory" clrVerticalNavIcon></clr-icon>
+        dep
+      </a>
+    </clr-vertical-nav>
+    <!-- <nav class="sidenav">
+      <section class="sidenav-content">
+        <a clrVerticalNavLink routerLink="./main" routerLinkActive="active">
+          Home
+        </a>
+
+      </section>
+    </nav> -->
   </div>
-  
+</div>
