--- a/src/app/modules/main/layout/layout.component.html
+++ b/src/app/modules/main/layout/layout.component.html
@@ -53,6 +53,10 @@
         <clr-icon shape="heart" clrVerticalNavIcon></clr-icon>
         test
       </a>
+      <a clrVerticalNavLink routerLink="./brefer" routerLinkActive="active">
+        <clr-icon shape="chart" clrVerticalNavIcon></clr-icon>
+        bRefer
+      </a>
     </clr-vertical-nav>
     <!-- <nav class="sidenav">
       <section class="sidenav-content">
